--- a/docs/01.指南/01.介绍.md
+++ b/docs/01.指南/01.介绍.md
@@ -43,7 +43,7 @@ permalink: /pages/616752/
 
 3.xterm搜索高亮
 
-4.文件方面， 键盘快速定位文件名开头字母，上传下载，拖拽文件上传， rz sz，丰富的右键操作（编辑文本，重命名，解压，压缩，改权限等等），拖拽行移动文件到文件夹，双击编辑文本，监听变化保存
+4.文件方面， 键盘快速定位文件名开头字母，上传下载，拖拽文件上传， trzsz(拖拽至term上传)，丰富的右键操作（编辑文本，重命名，解压，压缩，改权限等等），拖拽行移动文件到文件夹，双击编辑文本，监听变化保存
 
 5.文件传输列表
 
