更新问题说明

--- a/docs/01.指南/03.问题.md
+++ b/docs/01.指南/03.问题.md
@@ -11,3 +11,10 @@ permalink: /pages/69d016/
 3.路径空格问题，大部分做了转义处理
 
 4.windows需要安装 npcap，home目录bt_data 下, mac查看/dev/bpf*文件权限
+
+5.mac打字卡顿，切换输入法，搜狗测过没问题
+
+6.mac提示应用损坏？ sudo xattr -r -d com.apple.quarantine /Applications/BTSHELL.app/
+
+7.mac提示应用损坏？系统偏好设置 » 安全性与隐私，打开允许任何来源 sudo spctl --master-disable
+
