--- a/docs/01.指南/02.操作.md
+++ b/docs/01.指南/02.操作.md
@@ -12,6 +12,7 @@ xterm粘贴 		    右键
 xterm光标移动 	    alt+左键
 xterm高亮 	        ctrl+f
 打开linux文档        ctrl+w
+cmd提示             弹出界面时键盘右键进入聚焦，上下选择
 ```
 
 
