更新问题说明

--- a/docs/01.指南/02.操作.md
+++ b/docs/01.指南/02.操作.md
@@ -7,11 +7,13 @@ permalink: /pages/800369/
 ### 快捷键
 
 ```
+一些快捷键设置里面自定义
+
 xterm复制选中 	 	滚轮按键
 xterm粘贴 		    右键
 xterm光标移动 	    alt+左键
-xterm高亮 	        ctrl+f
-打开linux文档        ctrl+w
+xterm搜索 	        ctrl+f
+打开linux文档       ctrl+w
 cmd提示             弹出界面时键盘右键进入聚焦，上下选择
 ```
 
