更新问题说明

--- a/docs/01.指南/01.介绍.md
+++ b/docs/01.指南/01.介绍.md
@@ -4,7 +4,7 @@ date: 2023-04-16 12:58:45
 permalink: /pages/616752/
 ---
 
-## 这是一个由golang + vue开发的shell客户端，计划出一个免费版和付费版
+## 这是一个由golang + vue开发的shell客户端，目标让使用人群提高工作效率，多多摸鱼，计划出一个免费版和付费版
 
 [github地址](https://github.com/zundaren/btshell-page) | [gitee地址](https://gitee.com/zundaren/btshell-page)
 
@@ -56,3 +56,5 @@ permalink: /pages/616752/
 9.cd联动优化，select过滤拼音匹配优化
 
 10.输入提示，收集了一些常用命令
+
+11.多语言（按需）
