--- a/docs/01.指南/03.问题.md
+++ b/docs/01.指南/03.问题.md
@@ -18,3 +18,4 @@ permalink: /pages/69d016/
 
 7.mac提示应用损坏？系统偏好设置 » 安全性与隐私，打开允许任何来源 sudo spctl --master-disable
 
+8.windows putty导出session： reg export HKEY_CURRENT_USER\Software\SimonTatham\PuTTY d://putty.reg
