--- a/docs/01.指南/01.介绍.md
+++ b/docs/01.指南/01.介绍.md
@@ -30,6 +30,16 @@ permalink: /pages/616752/
         <img :src="$withBase('/img/comm/bt首页截图4.png')" alt="" class="no-zoom" style="width:1000px;height:300px;margin: 10px;">
       </td>
     </tr>
+    <tr>
+      <td align="center" valign="middle">
+        <img :src="$withBase('/img/comm/sjk.png')" alt="" class="no-zoom" style="width:1000px;height:300px;margin: 10px;">
+      </td>
+    </tr>
+    <tr>
+      <td align="center" valign="middle">
+        <img :src="$withBase('/img/comm/sjk2.png')" alt="" class="no-zoom" style="width:1000px;height:300px;margin: 10px;">
+      </td>
+    </tr>
 
   </tbody>
 </table>
@@ -58,3 +68,7 @@ permalink: /pages/616752/
 10.输入提示，收集了一些常用命令
 
 11.多语言（按需）
+
+12.数据库连接查询，表格数据新增修改删除保存
+
+13.软件安装脚本
