--- a/docs/01.指南/02.操作.md
+++ b/docs/01.指南/02.操作.md
@@ -15,6 +15,7 @@ xterm光标移动 	    alt+左键
 xterm搜索 	        ctrl+f
 打开linux文档       ctrl+w
 cmd提示             弹出界面时键盘右键进入聚焦，上下选择
+database runsql   ctrl+enter
 ```
 
 
