更新问题说明

--- a/docs/01.指南/03.问题.md
+++ b/docs/01.指南/03.问题.md
@@ -19,3 +19,35 @@ permalink: /pages/69d016/
 7.mac提示应用损坏？系统偏好设置 » 安全性与隐私，打开允许任何来源 sudo spctl --master-disable
 
 8.windows putty导出session： reg export HKEY_CURRENT_USER\Software\SimonTatham\PuTTY d://putty.reg
+
+9.sql编辑器中，默认按 ; 关键词 begin end; 分割语句，对于一些特殊的存储过程， 函数，结尾添加 // break_routine;
+
+```
+示例：
+insert into test.table1 (name, p, cicr, mrange)
+values ('x3', '(8,8)', '8,8,12', int8multirange('(1, 5)', '(10, 15)')); -- test sql
+
+CREATE OR REPLACE FUNCTION test.testp1(in num INTEGER)
+    RETURNS VOID AS $$
+BEGIN
+    num := num + 1;
+END;
+$$ LANGUAGE plpgsql;
+
+// break_routine;
+
+CREATE OR REPLACE FUNCTION test.testp2(in num INTEGER)
+    RETURNS VOID AS $$
+BEGIN
+    num := num + 1;
+END;
+$$ LANGUAGE plpgsql;
+
+// break_routine;
+
+select  * from test.table1 where range_eq(intrange, '[1,3)');
+select  * from test.table1 where multirange_eq(mrange, '{[2,5),[11,15)}');
+```
+
+
+
