更新问题说明

--- a/docs/01.指南/01.介绍.md
+++ b/docs/01.指南/01.介绍.md
@@ -40,6 +40,11 @@ permalink: /pages/616752/
         <img :src="$withBase('/img/comm/sjk2.png')" alt="" class="no-zoom" style="width:1000px;height:300px;margin: 10px;">
       </td>
     </tr>
+    <tr>
+      <td align="center" valign="middle">
+        <img :src="$withBase('/img/comm/sjk3.jpg')" alt="" class="no-zoom" style="width:1000px;height:300px;margin:10px;">
+      </td>
+    </tr>
 
   </tbody>
 </table>
