--- a/docs/01.指南/03.问题.md
+++ b/docs/01.指南/03.问题.md
@@ -48,6 +48,5 @@ $$ LANGUAGE plpgsql;
 select  * from test.table1 where range_eq(intrange, '[1,3)');
 select  * from test.table1 where multirange_eq(mrange, '{[2,5),[11,15)}');
 ```
-
-
+10.ssh终端三次esc特殊指令会吃掉粘贴的第一个字母，我这边先发送空格保证粘贴的内容完整 (副作用未知)
 
