--- a/docs/01.指南/01.介绍.md
+++ b/docs/01.指南/01.介绍.md
@@ -64,7 +64,7 @@ permalink: /pages/616752/
 
 6.网络连接统计，进程查询（右键kill），文件大小统计，linux命令学习文档，常用的软件安装脚本
 
-7.xterm颜色自定义修改
+7.xterm自定义颜色, starship主题
 
 8.历史记录功能，路径，cmd快速过滤，收藏
 
@@ -75,3 +75,5 @@ permalink: /pages/616752/
 11.多语言（按需）
 
 12.软件安装脚本
+
+13.github, gitee上传同步配置数据
