--- a/docs/01.指南/01.介绍.md
+++ b/docs/01.指南/01.介绍.md
@@ -52,28 +52,28 @@ permalink: /pages/616752/
 
 ## 功能：
 
-1.普通ssh连接，开vpn连接ssh，socks5代理连接，跳板机，快速重开，复制重开
+1.ssh连接，socks5代理连接，跳板，快速重开，复制重开，trzsz文件传输
 
-2.本地网络监控，服务器cpu，内存，负载等top信息监控
+2.telnet，串口（功能不全）
 
-3.xterm搜索高亮
+3.starship主题，自定义背景颜色，字体等
 
-4.文件方面， 键盘快速定位文件名开头字母，上传下载，拖拽文件上传， trzsz(拖拽至term上传)，丰富的右键操作（编辑文本，重命名，解压，压缩，改权限等等），拖拽行移动文件到文件夹，双击编辑文本，监听变化保存
+4.本地网络监控，服务器cpu，内存，负载等top信息监控
 
-5.文件传输列表, 点击打开下载目录，点击文件打开文件位置
+5.终端搜索高亮，链接打开浏览器，下载终端记录
 
-6.网络连接统计，进程查询（右键kill），文件大小统计，linux命令学习文档，常用的软件安装脚本
+6.文件方面， 键盘快速定位文件名开头字母，上传下载，拖拽文件上传，丰富的右键操作（编辑文本，重命名，解压，压缩，改权限等等），拖拽行移动文件到文件夹，双击编辑文本，监听变化保存
 
-7.xterm自定义颜色, starship主题
+7.文件传输列表, 点击打开下载目录，点击文件打开文件位置
 
-8.历史记录功能，路径，cmd快速过滤，收藏
+8.网络连接统计，进程查询（右键kill），文件大小统计，linux命令学习文档，常用的软件安装脚本 （基于命令操作查询的功能）
 
-9.cd联动优化，选择框过滤拼音匹配优化
+9.历史记录功能，路径，cmd快速过滤，收藏
 
-10.输入提示，收集了一些常用命令
+10.cd路径联动，打包传输文件，目录大小统计，系统信息打印等功能
 
-11.多语言（按需）
+10.输入提示，收集了一些常用命令 （目标是做成类似ide的智能提示）
 
-12.软件安装脚本
+12.多语言（按需）
 
 13.github, gitee上传同步配置数据
